# time

./: CMakeLists.txt  init.cpp  init.h  main.cpp  main.h  setting.cpp  setting.h  setting.properties  time.cpp  time.h
language/: EN_US_lang_display.h  SC_CN_lang_display.h  TC_CN_lang_display.h  language_display_strategy.cpp  language_display_strategy.h
utils/: info.cpp  info.h  prop_test.cpp  properties.cpp  properties.h  test.prop
